# seed

./: .cache.dvc  .dvcignore  .env  .gitignore  README.md  data.dvc  pyproject.toml  saved_models.dvc  temp.dvc
.dvc/: config
config/: config.yaml  infer_bart_infotab.json  train_bart.json  train_bart_infotab.json  train_infotab.json  train_tapas.json  train_tapas_infotab.json  train_tapas_infotab_new.json  train_tapex.json  train_tapex_infotab.json
config/callbacks/: defaults.yaml  model_checkpoint.yaml  model_checkpoint_acc.yaml  model_checkpoint_loss.yaml
config/datamodule/: infotab.yaml  totto.yaml  totto_triplet.yaml
config/logger/: wandb.yaml
config/model/: bart-large-mnli.yaml  triplet-bart-large-mnli.yaml
config/paths/: default.yaml
config/trainer/: gpu.yaml
demo/: bert_visualization.ipynb  dataset.ipynb  error_analysis.ipynb  pipeline.ipynb  pyserini.ipynb  rag.ipynb  retrieval.ipynb  run_infotab.ipynb  tapas.ipynb  unifiedqa.ipynb
demo/.ipynb_checkpoints/: dataset-checkpoint.ipynb  error_analysis-checkpoint.ipynb  pipeline-checkpoint.ipynb  pyserini-checkpoint.ipynb  retrieval-checkpoint.ipynb  run_infotab-checkpoint.ipynb  unifiedqa-checkpoint.ipynb
models/tapex/: .gitignore  checkpoint-10000.dvc
results/: result.txt  scores_3_test.json
results/.ipynb_checkpoints/: scores_3_dev-checkpoint.json
seed/: train_pl.py
seed/dataset/: table_nli.py
seed/datasets/: table_nli.py
seed/demo/: rag.ipynb
seed/extractor/: __init__.py  unifiedqa.py
seed/helpers/: entity_linker.py
seed/lightning/: data_module.py  module.py  triplet_module.py
seed/main/evaluate/: document_retrieval.py  error_detection.py
seed/main/preprocess/: generate_counter_factual.py  generate_counter_factual_infotab.py  generate_data_new.py  generate_data_triplet.py  process_infotab.py  process_tabpert_infotab.py
seed/main/preprocessing/: generate_counter_factual.py  generate_data.py  generate_data_new.py  generate_sentence_selection.py  process_totto.py  (+1 more)
seed/pipeline/: pipeline.py
seed/retriever/: __init__.py  dpr.py
seed/ui/: app.py
seed/utils/: __init__.py  pl_utils.py  pylogger.py
seed/verifier/: __init__.py  infotab.py  tapas.py  tapex.py
(+19 files in other folders)
