[tool.poetry]
name = "wikitable_clean"
version = "0.1.0"
description = ""
authors = ["Clapika"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.19.2"
jsonlines = "^3.0.0"
pandas = "^1.4.2"
datasets = "^2.2.2"
spacy = "^3.3.0"
blingfire = "^0.1.8"
elasticsearch-dsl = "^7.4.0"
scikit-learn = "^1.1.1"
lxml = "^4.9.0"
wikipedia = "^1.4.0"
accelerate = "^0.9.0"
orjson = "^3.7.2"
inflect = "^5.6.0"
pyserini = "^0.17.0"
wandb = "^0.12.18"
wikitextparser = "^0.49.2"
flair = "^0.11.3"
dateparser = "^1.1.1"
price-parser = "^0.3.4"
number-parser = "^0.2.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
